<resources>
    <!--    <string name="app_name">MoneyManager</string>-->
    <!--    TODO: Sort by screen-->
    <string name="filters_template">Showing %1$s %2$s sorted by %3$s in %4$s order.</string>
    <string name="showing">"Showing "</string>
    <string name="month_template">in %1$s of %2$d </string>
    <string name="range_template">from %1$s to %2$s </string>
    <string name="sorted_by_template">sorted by %1$s in %2$s order.</string>
    <string name="error_invalid_category_name">You must enter a valid category name.</string>
    <string name="error_category_not_selected">You must select a category.</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="error_empty_description">You must enter a description.</string>
    <string name="error_amount_must_be_positive">Amount must be larger than 0.</string>
    <string name="error_invalid_date">Date must be in dd/mm/yyyy format.</string>
    <string name="error_invalid_dates">The end date cannot be before the start date.</string>
    <string name="error_invalid_month">Month is not valid.</string>
    <string name="error_category_type_not_selected">Incomes or expenses must be selected.</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>
    <string name="no_transactions">No transactions.</string>
    <string name="descending">descending</string>
    <string name="ascending">ascending</string>
    <string name="all_expenses">all expenses</string>
    <string name="all_incomes">all incomes</string>
    <string name="all_transactions">all transactions</string>
    <string name="category_added">Category added.</string>
    <string name="category_updated">Category updated.</string>
    <string name="error_adding_category">Error adding category.</string>
    <string name="error_updating_category">Error updating category.</string>
    <string name="error_default">An error occurred.</string>
    <string name="custom_range">Custom range</string>
    <string name="transaction_added">Transaction added.</string>
    <string name="period">Period</string>
    <string name="whole_month">Whole month</string>
    <string name="show">Show</string>
    <string name="expenses">Expenses</string>
    <string name="month">Month</string>
    <string name="from">From</string>
    <string name="date_template">dd/mm/yyyy</string>
    <string name="to">To</string>
    <string name="sort_by">Sort by</string>
    <string name="order">Order</string>
    <string name="apply">Apply</string>
    <string name="cancel">cancel</string>
    <string name="search">Search</string>
    <string name="clear">clear</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="type">Type</string>
    <string name="expense">Expense</string>
    <string name="description">Description</string>
    <string name="category_name">Category name</string>
</resources>