<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingEnd="8dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/textPeriodLabel"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period"
        app:layout_constraintBottom_toBottomOf="@id/radioGroupPeriod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/radioGroupPeriod" />

    <RadioGroup
        android:id="@+id/radioGroupPeriod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/barrierLabel"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/buttonWholeMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/whole_month"
            android:textAppearance="?attr/textAppearanceBody1" />

        <RadioButton
            android:id="@+id/buttonCustomRange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/custom_range"
            android:textAppearance="?attr/textAppearanceBody1" />

    </RadioGroup>

    <!--    Income or expense section-->
    <TextView
        android:id="@+id/textTypeLabel"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"
        app:layout_constraintBottom_toBottomOf="@id/cbxIncomes"
        app:layout_constraintEnd_toStartOf="@id/dropdownLayoutMonth"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/textPeriodLabel"
        app:layout_constraintTop_toTopOf="@id/cbxIncomes" />

    <CheckBox
        android:id="@+id/cbxIncomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/income"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toEndOf="@id/barrierLabel"
        app:layout_constraintTop_toBottomOf="@id/radioGroupPeriod" />

    <CheckBox
        android:id="@+id/cbxExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/expenses"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintBottom_toBottomOf="@id/cbxIncomes"
        app:layout_constraintStart_toEndOf="@id/cbxIncomes"
        app:layout_constraintTop_toTopOf="@id/cbxIncomes" />

    <!--    Month section-->
    <TextView
        android:id="@+id/textMonthLabel"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        app:layout_constraintBottom_toBottomOf="@id/dropdownLayoutMonth"
        app:layout_constraintEnd_toStartOf="@id/dropdownLayoutMonth"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/textPeriodLabel"
        app:layout_constraintTop_toTopOf="@id/dropdownLayoutMonth" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownLayoutMonth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/arrow_down"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/dropdownLayoutYear"
        app:layout_constraintStart_toEndOf="@id/barrierLabel"
        app:layout_constraintTop_toBottomOf="@id/cbxIncomes">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/dropdownMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    TODO: Align to end-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownLayoutYear"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/arrow_down"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@id/dropdownLayoutMonth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dropdownLayoutMonth"
        app:layout_constraintTop_toTopOf="@id/dropdownLayoutMonth">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/dropdownYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Range section-->
    <TextView
        android:id="@+id/textFromLabel"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintBottom_toBottomOf="@id/editTextLayoutFrom"
        app:layout_constraintStart_toStartOf="@id/textPeriodLabel"
        app:layout_constraintTop_toTopOf="@id/editTextLayoutFrom" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayoutFrom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/date_template"
        android:minWidth="144dp"
        android:textColorHint="@color/gray"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toEndOf="@id/barrierLabel"
        app:layout_constraintTop_toBottomOf="@id/dropdownLayoutMonth">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextFrom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:maxLength="10"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    To section-->
    <TextView
        android:id="@+id/textToLabel"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintBottom_toBottomOf="@id/editTextLayoutTo"
        app:layout_constraintStart_toStartOf="@id/textPeriodLabel"
        app:layout_constraintTop_toTopOf="@id/editTextLayoutTo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayoutTo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/date_template"
        android:minWidth="144dp"
        android:textColorHint="@color/gray"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toEndOf="@id/barrierLabel"
        app:layout_constraintTop_toBottomOf="@id/editTextLayoutFrom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:maxLength="10"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    Sort section-->
    <TextView
        android:id="@+id/textSortLabel"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        app:layout_constraintBottom_toBottomOf="@id/dropdownLayoutSort"
        app:layout_constraintStart_toStartOf="@id/textPeriodLabel"
        app:layout_constraintTop_toTopOf="@id/dropdownLayoutSort" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdownLayoutSort"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxWidth="64dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/arrow_down"
        app:hintEnabled="false"
        app:layout_constraintStart_toEndOf="@id/barrierLabel"
        app:layout_constraintTop_toBottomOf="@id/editTextLayoutTo">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/dropdownSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textOrderLabel"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="@id/toggleGroupOrder"
        app:layout_constraintStart_toStartOf="@id/textSortLabel"
        app:layout_constraintTop_toTopOf="@id/toggleGroupOrder" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:barrierMargin="4dp"
        app:constraint_referenced_ids="textPeriodLabel,textTypeLabel,textMonthLabel,textFromLabel,textToLabel,textSortLabel,textOrderLabel" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroupOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/barrierLabel"
        app:layout_constraintTop_toBottomOf="@id/dropdownLayoutSort"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/buttonDescending"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_sort_desc" />

        <Button
            android:id="@+id/buttonAscending"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_sort_asc" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonApply"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/apply"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleGroupOrder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@id/buttonApply"
        app:layout_constraintEnd_toStartOf="@id/buttonApply"
        app:layout_constraintTop_toTopOf="@id/buttonApply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClear"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textAllCaps="true"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@id/buttonApply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonApply"
        app:strokeColor="@color/red"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>